Improve with IntelliJ suggestions